# TinyRrOS

./: .gitignore  Makefile  README.md
bootloader/: .gitignore  Makefile  README.md  boot.S  boot.s  sbi_base.ld  sbi_entry.S  sbi_lib.c  sbi_linker.ld  sbi_main.c  sbi_timer.c  sbi_timer.h  sbi_trap.c  sbi_trap.h  uart.c
bootloader/include/: csr.h  io.h  sbi_offsets.h  sbi_trap_regs.h  uart.h
os/: Cargo.toml  Makefile  build.rs  linker.ld
os/.cargo/: config.toml
os/scripts/: symbol2c.py  symbol2rs.py
os/src/: backtrace.rs  console.rs  io.rs  lang_item.rs  main.rs  memory.rs  plic.rs  sbi.rs  timer.rs  trap.rs
os/src/asm/: boot.asm  entry.asm
os/src/drivers/serial/: uart16550.rs
