[package]
name = "os"
version = "0.1.0"
edition = "2021"

[dependencies]

[build]
target = "riscv64gc-unknown-none-elf"

[target.riscv64gc-unknown-none-elf]
rustflags = ["-Clink-arg=-Tlinker.ld", "-Cforce-frame-pointers=yes", "-Clink-arg=-nostartfiles"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
